Fix scrollbar overflow from spinning animation

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   background-image: url("coder.gif");
   padding-bottom: 30px;
   padding-top: 30px;
-
+  overflow: hidden;
 }
 
 .Acm_Logo {
